# zmachine-interpreter

./: License.md  README.md  TODO  zmachine-interpreter.cabal
src/: Dictionary.hs  ImmutableBytes.hs  Instruction.hs  Main.hs  Object.hs  OpcodeTypes.hs  Story.hs  Utilities.hs  ZString.hs
