name:                zmachine-interpreter
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/DylanSp/zmachine-interpreter#readme
license:             BSD3
license-file:        License.md
author:              Dylan
maintainer:          dylan.richard.sprague@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable zmachine-interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring 
